--- a/starship/config.toml
+++ b/starship/config.toml
@@ -23,6 +23,7 @@ disabled = false
 [directory]
 format = '[ $path](#CFB53D bold) [$read_only]($read_only_style) '
 read_only = ''
+truncation_length = 1
 
 # Replace the '❯' symbol in the prompt with '➜'
 [character] # The name of the module we are configuring is 'character'
@@ -67,5 +68,10 @@ symbol = ' '
 [php]
 symbol = '󰌟 '
 
+[docker_context]
+symbol = '󰡨 '
+format = 'via [$symbol ](blue bold)'
+
 [package]
 symbol = '󰏗 '
+
